--- a/goldnerlab/configuration.mkd
+++ b/goldnerlab/configuration.mkd
@@ -3,7 +3,7 @@
    * IP address: 128.119.56.93
 
  * Hardware:
-   * nVidia GTX480
+   * nVidia GTX480 1.5GB
    * 18 GB RAM
    * 16 cores (Intel Xeon 5500)
 
