--- a/goggle/log.mkd
+++ b/goggle/log.mkd
@@ -9,7 +9,7 @@
 
  * Was also bitten by [this](http://stackoverflow.com/questions/9934549/very-strange-linker-behavior)
    while building `pmemd.cuda`
-   * This is apparently due `libstdc++.so` being omitted from the link command line
+   * This is apparently due `libstdc++.so` being omitted from the linker command line
    * Worked around by adding,
    
         PMEMD_CU_LIBS += /usr/lib/x86_64-linux-gnu/libstdc++.so.6
