--- a/goldnerlab/log.mkd
+++ b/goldnerlab/log.mkd
@@ -1,3 +1,60 @@
+## 2013-10-22
+ * Expanded `/dev/md0` filesystem to full size of volume
+ 
+## 2013-10-19
+
+ * Moved `/dev/md0` from RAID10 to RAID0 to RAID5
+
+        $ mdadm --grow /dev/md0 --backup-file=/var/md-backup --level=0
+        $ mdadm --grow /dev/md0 --backup-file=/var/md-backup --level=5
+
+ * Need to expand filesystem after things have synchronized
+
+## 2013-10-13
+
+ * Setting up bup backup of `/mnt/array` to `goldner-backup`
+ * Strange slowness of `bup bloom`
+ * Still seeing occassional funkiness of `ata2.01`,
+
+      [2649467.141902] ata2.01: exception Emask 0x0 SAct 0x3f4a952 SErr 0x400000 action 0x6
+      [2649467.217305] ata2.01: irq_stat 0x00060002, device error via SDB FIS
+      [2649467.293452] ata2.01: SError: { Handshk }
+      [2649467.369193] ata2.01: failed command: WRITE FPDMA QUEUED
+      [2649467.444859] ata2.01: cmd 61/00:08:3f:b4:f2/04:00:e6:00:00/40 tag 1 ncq 524288 out
+      [2649467.444859]          res f4/b2:01:01:00:00/00:00:00:10:f4/00 Emask 0x2 (HSM violation)
+      [2649467.598529] ata2.01: status: { Busy }
+      [2649467.675040] ata2.01: error: { ICRC IDNF }
+      [2649467.750713] ata2.01: failed command: WRITE FPDMA QUEUED
+      [2649467.826947] ata2.01: cmd 61/00:20:3f:f8:f2/04:00:e6:00:00/40 tag 4 ncq 524288 out
+      [2649467.826947]          res f4/b2:01:01:00:00/00:00:00:40:f4/00 Emask 0x2 (HSM violation)
+      [2649467.980702] ata2.01: status: { Busy }
+      [2649468.057229] ata2.01: error: { ICRC IDNF }
+      [2649468.133538] ata2.01: failed command: WRITE FPDMA QUEUED
+      [2649468.209410] ata2.01: cmd 61/00:30:3f:fc:f2/04:00:e6:00:00/40 tag 6 ncq 524288 out
+      [2649468.209410]          res f4/b2:01:01:00:00/00:00:00:60:f4/00 Emask 0x2 (HSM violation)
+      [2649468.363981] ata2.01: status: { Busy }
+      [2649468.441165] ata2.01: error: { ICRC IDNF }
+      [2649468.517062] ata2.01: failed command: WRITE FPDMA QUEUED
+      [2649468.593622] ata2.01: cmd 61/00:40:3f:f4:f2/04:00:e6:00:00/40 tag 8 ncq 524288 out
+      [2649468.593622]          res f4/b2:01:01:00:00/00:00:00:80:f4/00 Emask 0x2 (HSM violation)
+      [2649468.748634] ata2.01: status: { Busy }
+      [2649468.825379] ata2.01: error: { ICRC IDNF }
+      [2649468.901975] ata2.01: failed command: WRITE FPDMA QUEUED
+      [2649468.978331] ata2.01: cmd 61/00:58:3f:64:f2/04:00:e6:00:00/40 tag 11 ncq 524288 out
+      [2649468.978331]          res f4/b2:01:01:00:00/00:00:00:b0:f4/00 Emask 0x2 (HSM violation)
+      [2649469.133575] ata2.01: status: { Busy }
+      [2649469.210987] ata2.01: error: { ICRC IDNF }
+      [2649469.287550] ata2.01: failed command: WRITE FPDMA QUEUED
+      [2649469.364029] ata2.01: cmd 61/00:68:3f:f0:f2/04:00:e6:00:00/40 tag 13 ncq 524288 out
+      [2649469.364029]          res f4/b2:01:01:00:00/00:00:00:d0:f4/00 Emask 0x2 (HSM violation)
+      [2649469.518738] ata2.01: status: { Busy }
+      [2649469.596631] ata2.01: error: { ICRC IDNF }
+      [2649469.673598] ata2.01: failed command: WRITE FPDMA QUEUED
+      [2649469.751000] ata2.01: cmd 61/00:78:3f:6c:f2/04:00:e6:00:00/40 tag 15 ncq 524288 out
+      [2649469.751000]          res 61/00:78:3f:6c:f2/00:00:e6:00:00/40 Emask 0x1 (device error)
+      [2649469.906991] ata2.01: status: { DRDY DF ERR }
+
+
 ## 2013-08-18
 
  * Due to [bug][collectd-bug] in version of `collectd` distributed in Raring, forced to install from source.
