--- a/goldner-backup/log.mkd
+++ b/goldner-backup/log.mkd
@@ -1,5 +1,9 @@
 # goldner-backup
 
+## 2014-05-08
+ * At behest of John Denker `smartd` was enabled
+   (`/etc/default/smartmontools`), root's mail forwarded to bgamari (`/root/.forward`)
+
 ## 2013-10-10
 
  * All parts here, machine built
