--- a/goggle/log.mkd
+++ b/goggle/log.mkd
@@ -1,3 +1,9 @@
+# goggle
+
+## 2014-05-08
+ * At behest of John Denker `smartd` was enabled
+   (`/etc/default/smartmontools`), root's mail forwarded to bgamari (`/root/.forward`)
+
 ## 2013-06-07
 
  * Upgraded to Ubuntu 13.04
