--- a/goldnerlab/drives.mkd
+++ b/goldnerlab/drives.mkd
@@ -2,7 +2,7 @@ ledctl
 
 smartctl
 
- * /dev/sdi
+ * root
    * Partitions:
      * 0: ext4, mounted to / 
    * Seagate ST2000DM001-1ER164
@@ -12,7 +12,7 @@ smartctl
    * Installed on 22 Aug 2014 during root switchover away from 
      Western Digital WD1600AAJS-00V4A0
 
- * /dev/sdb:
+ * old data
    * LVM
    * Seagate Barracuda 7200.12: ST31000528AS
    * Serial number: 9VP3YFPT
@@ -20,7 +20,7 @@ smartctl
    * In goldnerlab, second removable tray from top
    * Installed during initial installation
 
- * /dev/sdc
+ * old data
    * LVM
    * Seagate Barracuda 7200.12: ST31000528AS
    * Serial number: 9VP408G5
@@ -28,7 +28,7 @@ smartctl
    * In goldnerlab, third removable tray from top
    * Installed during initial installation
 
- * /dev/sde - /dev/sdl
+ * array
    * md0 constituents
    * 8x 2TB 5400RPM Samsung HD204UI
    * Serial numbers:
@@ -39,14 +39,14 @@ smartctl
      * /dev/sdh: S2H7JD2ZB07509
      * /dev/sdi: S2H7JD2ZB07648
      * /dev/sdj: S2H7JD2ZB14653
-   * Installed with array 2011-01
+   * Installed with array Jan 2011
 
- * /dev/sdd
+ * array spare
    * Spare in md0
-   * Western Digital WD20EZX 2TB
+   * Western Digital WD20EZX-00DC0B0 2TB
    * Serial number: WD-WMC300850775
    * 2TB
-   * In goldnerlab, fourth drive from top
+   * In goldnerlab, fourth removable tray from top
    * Installed on 17 Apr 2013 during potential drive failure
 
 
